force-app/main/default/objects/Lead/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <label>Additional Contacts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Our Expert Witness</fullName>
            </value>
            <value>
                <fullName>Opposing Counsel</fullName>
            </value>
            <value>
                <fullName>Opposing Party</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Interested Party</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>