force-app/main/default/objects/Lead/fields/Additional_Party__c.field-meta.xml
<CustomField>
    <fullName>Additional_Party__c</fullName>
    <inlineHelpText>Name of related or additional parties that need to sign fee agreement</inlineHelpText>
    <label>Additional Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>