force-app/main/default/objects/Lead/fields/Agency_Police_Dept_Specify__c.field-meta.xml
<CustomField>
    <fullName>Agency_Police_Dept_Specify__c</fullName>
    <label>Agency Police Dept (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>