force-app/main/default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Litigation</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Contested</fullName>
            </value>
            <value>
                <fullName>Uncontested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>