force-app/main/default/objects/Lead/fields/Attorney_to_personally_follow_up_w_PC__c.field-meta.xml
<CustomField>
    <fullName>Attorney_to_personally_follow_up_w_PC__c</fullName>
    <label>Attorney to personally follow up w/ PC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>