force-app/main/default/objects/Lead/fields/Can_Email_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Can_Email_Follow_Up__c</fullName>
    <label>Can we email you follow-up information?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>