force-app/main/default/objects/Lead/fields/Can_Text_You__c.field-meta.xml
<CustomField>
    <fullName>Can_Text_You__c</fullName>
    <label>Can we text you?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>