force-app/main/default/objects/Lead/fields/CL_Agency_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>CL_Agency_Other_Specify__c</fullName>
    <label>Agency Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>