force-app/main/default/objects/Lead/fields/CL_Case_Dismissed_Acquitted__c.field-meta.xml
<CustomField>
    <fullName>CL_Case_Dismissed_Acquitted__c</fullName>
    <label>Case Dismissed or Acquitted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>