force-app/main/default/objects/Lead/fields/CL_Case_Involvement_Types__c.field-meta.xml
<CustomField>
    <fullName>CL_Case_Involvement_Types__c</fullName>
    <label>Case Involvement Types (Check all)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Juvenile Offense</fullName>
            </value>
            <value>
                <fullName>Sex Offense</fullName>
            </value>
            <value>
                <fullName>Drug Offense</fullName>
            </value>
            <value>
                <fullName>Death or Serious Bodily Injury</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>