force-app/main/default/objects/Lead/fields/CL_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CL_Case_Number__c</fullName>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>