force-app/main/default/objects/Lead/fields/CL_Case_Status_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>CL_Case_Status_Other_Specify__c</fullName>
    <label>Case Status Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>