force-app/main/default/objects/Lead/fields/CL_Charges_or_Allegations__c.field-meta.xml
<CustomField>
    <fullName>CL_Charges_or_Allegations__c</fullName>
    <label>Charges or Allegations</label>
    <type>TextArea</type>
</CustomField>