force-app/main/default/objects/Lead/fields/CL_Charges_To_Seal__c.field-meta.xml
<CustomField>
    <fullName>CL_Charges_To_Seal__c</fullName>
    <label>Charges Seeking to Seal</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>