force-app/main/default/objects/Lead/fields/CL_Completed_Court_Conditions__c.field-meta.xml
<CustomField>
    <fullName>CL_Completed_Court_Conditions__c</fullName>
    <label>Completed Court-Ordered Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>