force-app/main/default/objects/Lead/fields/CL_DUI_Prior_Convictions__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Prior_Convictions__c</fullName>
    <label>DUI - Prior Convictions?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>