force-app/main/default/objects/Lead/fields/CL_DUI_Prior_Convictions_Details__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Prior_Convictions_Details__c</fullName>
    <label>DUI - Prior Convictions Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>