force-app/main/default/objects/Lead/fields/CL_DUI_Pulled_Over_Reason__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Pulled_Over_Reason__c</fullName>
    <label>DUI - Pulled Over Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Speeding</fullName>
            </value>
            <value>
                <fullName>Reckless Driving</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>