force-app/main/default/objects/Lead/fields/CL_DUI_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Test_Results__c</fullName>
    <label>DUI - Test Results</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>