force-app/main/default/objects/Lead/fields/CL_DUI_Tests_Conducted__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Tests_Conducted__c</fullName>
    <label>DUI - Tests Conducted</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>