force-app/main/default/objects/Lead/fields/CL_In_Custody__c.field-meta.xml
<CustomField>
    <fullName>CL_In_Custody__c</fullName>
    <label>Currently in Custody?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>