force-app/main/default/objects/Lead/fields/CL_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Incident_Date__c</fullName>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>