force-app/main/default/objects/Lead/fields/CL_Investigating_Agency__c.field-meta.xml
<CustomField>
    <fullName>CL_Investigating_Agency__c</fullName>
    <label>Investigating Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Police Department</fullName>
            </value>
            <value>
                <fullName>District Attorney’s Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>