force-app/main/default/objects/Lead/fields/CL_Matter_Under_Investigation__c.field-meta.xml
<CustomField>
    <fullName>CL_Matter_Under_Investigation__c</fullName>
    <label>Matter Under Investigation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>