force-app/main/default/objects/Lead/fields/CL_Needs_Bail_Bond_Help__c.field-meta.xml
<CustomField>
    <fullName>CL_Needs_Bail_Bond_Help__c</fullName>
    <label>Need Help with Bail/Bond?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>