force-app/main/default/objects/Lead/fields/Client_does_not_wish_to_retain_why__c.field-meta.xml
<CustomField>
    <fullName>Client_does_not_wish_to_retain_why__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Retained</fullName>
            </value>
            <value>
                <fullName>Considering other legal options</fullName>
            </value>
            <value>
                <fullName>Unsure if they want/need representation</fullName>
            </value>
            <value>
                <fullName>Waiting for information/ change of circumstance</fullName>
            </value>
            <value>
                <fullName>Advised the representation not necessary</fullName>
            </value>
            <value>
                <fullName>Attempting to handle on their own</fullName>
            </value>
            <value>
                <fullName>Too expensive/ financial difficulty</fullName>
            </value>
            <value>
                <fullName>Attorney declined representation due to client being difficult or otherwise undesirable</fullName>
            </value>
            <value>
                <fullName>Attorney declined representation based on the amount in controversy, SOL, or merits of the case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>