force-app/main/default/objects/Lead/fields/Clio_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Clio_Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clio Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>