force-app/main/default/objects/Lead/fields/Conflict_Checks__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Checks__c</fullName>
    <label>Conflict Checks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>