force-app/main/default/objects/Lead/fields/Consult_Held_With__c.field-meta.xml
<CustomField>
    <fullName>Consult_Held_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consult Held With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>