force-app/main/default/objects/Lead/fields/Currently_Represented__c.field-meta.xml
<CustomField>
    <fullName>Currently_Represented__c</fullName>
    <label>Currently represented by an attorney?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>