force-app/main/default/objects/Lead/fields/Date_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Payment__c</fullName>
    <description>Set by Payment - After flow when first Payment record is created on associated Matter</description>
    <inlineHelpText>Date client made first payment. Set automatically by the system</inlineHelpText>
    <label>Date First Payment</label>
    <type>Date</type>
</CustomField>