force-app/main/default/objects/Lead/fields/Date_Signed_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_Up__c</fullName>
    <description>Dates pulled from Date FA was signed and Date First Payment</description>
    <formula>IF(
  ISBLANK(Date_First_Payment__c),
  Lead_Completion_Date__c,
  IF(
    ISBLANK(Lead_Completion_Date__c),
    Date_First_Payment__c,
    IF(
      Date_First_Payment__c &lt;= Lead_Completion_Date__c,
      Date_First_Payment__c,
      Lead_Completion_Date__c
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the date the client signed up (the first day they either made a payment or signed a fee agreement)</inlineHelpText>
    <label>Date Signed Up</label>
    <type>Date</type>
</CustomField>