force-app/main/default/objects/Lead/fields/Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome__c</fullName>
    <label>Specific outcome hoping to achieve</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>