force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Hired Another Firm</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>Out of Jurisdiction / Practice Area</fullName>
            </value>
            <value>
                <fullName>Statute of Limitations Expired</fullName>
            </value>
            <value>
                <fullName>Low Case Value / Not Economically Viable</fullName>
            </value>
            <value>
                <fullName>Client Red Flags</fullName>
            </value>
            <value>
                <fullName>Lack of Merit or Evidence</fullName>
            </value>
            <value>
                <fullName>Firm Availability</fullName>
            </value>
            <value>
                <fullName>Client Financial Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>