force-app/main/default/objects/Lead/fields/DV_Abuse_Type_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuse_Type_Other_Specify__c</fullName>
    <label>Abuse Type Other (Specify)</label>
    <type>TextArea</type>
</CustomField>