force-app/main/default/objects/Lead/fields/DV_Abuser_Contact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Contact_Frequency__c</fullName>
    <label>Abuser Contact Frequency</label>
    <type>TextArea</type>
</CustomField>