force-app/main/default/objects/Lead/fields/DV_Abuser_Lives_With_You__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Lives_With_You__c</fullName>
    <label>Does Abuser Live With You?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>