force-app/main/default/objects/Lead/fields/DV_Abuser_Threat_Details__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Threat_Details__c</fullName>
    <label>Abuser Threat Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>