force-app/main/default/objects/Lead/fields/DV_Abuser_Weapon_Situation__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Weapon_Situation__c</fullName>
    <label>Abuser Weapon Situation Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>