force-app/main/default/objects/Lead/fields/DV_Children_Witness_Abuse_Details__c.field-meta.xml
<CustomField>
    <fullName>DV_Children_Witness_Abuse_Details__c</fullName>
    <label>Children Witness/Affected by Abuse</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>