force-app/main/default/objects/Lead/fields/DV_Contacted_Law_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>DV_Contacted_Law_Enforcement__c</fullName>
    <label>Contacted Law Enforcement/Filed Police</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>