force-app/main/default/objects/Lead/fields/DV_Criminal_Case_Details__c.field-meta.xml
<CustomField>
    <fullName>DV_Criminal_Case_Details__c</fullName>
    <label>Criminal Case Details (Related to Abuse)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>