force-app/main/default/objects/Lead/fields/DV_Current_Protection_Order__c.field-meta.xml
<CustomField>
    <fullName>DV_Current_Protection_Order__c</fullName>
    <label>Current Protection Orders in Place?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>