force-app/main/default/objects/Lead/fields/DV_Firearm_Types__c.field-meta.xml
<CustomField>
    <fullName>DV_Firearm_Types__c</fullName>
    <label>Firearm/Weapon Types</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>