force-app/main/default/objects/Lead/fields/DV_Firearms_Present__c.field-meta.xml
<CustomField>
    <fullName>DV_Firearms_Present__c</fullName>
    <label>Firearms/Weapons in Home or with Abuser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>