force-app/main/default/objects/Lead/fields/DV_Immediate_Danger__c.field-meta.xml
<CustomField>
    <fullName>DV_Immediate_Danger__c</fullName>
    <label>Are You in Immediate Danger?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>