force-app/main/default/objects/Lead/fields/DV_Injured_From_Abuse__c.field-meta.xml
<CustomField>
    <fullName>DV_Injured_From_Abuse__c</fullName>
    <label>Injured as Result of Abuse?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>