force-app/main/default/objects/Lead/fields/DV_Injury_Details_Medical_Attention__c.field-meta.xml
<CustomField>
    <fullName>DV_Injury_Details_Medical_Attention__c</fullName>
    <label>Injury Details &amp; Medical Attention</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>