force-app/main/default/objects/Lead/fields/DV_Involved_In_Criminal_Case__c.field-meta.xml
<CustomField>
    <fullName>DV_Involved_In_Criminal_Case__c</fullName>
    <label>Involved in Crim. Case Related to Abuse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>