force-app/main/default/objects/Lead/fields/DV_Law_Enforcement_Outcome__c.field-meta.xml
<CustomField>
    <fullName>DV_Law_Enforcement_Outcome__c</fullName>
    <label>Law Enforcement Outcome (Case #)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>