force-app/main/default/objects/Lead/fields/DV_Need_Shelter_Assistance__c.field-meta.xml
<CustomField>
    <fullName>DV_Need_Shelter_Assistance__c</fullName>
    <label>Need Assistance Finding Shelter?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>