force-app/main/default/objects/Lead/fields/DV_Ongoing_Violence_Situation__c.field-meta.xml
<CustomField>
    <fullName>DV_Ongoing_Violence_Situation__c</fullName>
    <label>Ongoing Violence Current Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>