force-app/main/default/objects/Lead/fields/DV_Perpetrator_Family_Specify__c.field-meta.xml
<CustomField>
    <fullName>DV_Perpetrator_Family_Specify__c</fullName>
    <label>Perpetrator Family Member (Specify)</label>
    <type>TextArea</type>
</CustomField>