force-app/main/default/objects/Lead/fields/DV_Perpetrator_Identity_Other__c.field-meta.xml
<CustomField>
    <fullName>DV_Perpetrator_Identity_Other__c</fullName>
    <label>Perpetrator Identity Other (Specify)</label>
    <type>TextArea</type>
</CustomField>