force-app/main/default/objects/Lead/fields/DV_Physically_Harmed__c.field-meta.xml
<CustomField>
    <fullName>DV_Physically_Harmed__c</fullName>
    <label>Harmed by Household/Relationship Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>