force-app/main/default/objects/Lead/fields/DV_Protection_Order_Granted__c.field-meta.xml
<CustomField>
    <fullName>DV_Protection_Order_Granted__c</fullName>
    <label>Protection Order Granted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>