force-app/main/default/objects/Lead/fields/DV_Recent_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>DV_Recent_Incident_Date__c</fullName>
    <label>Recent Incident Date</label>
    <type>Date</type>
</CustomField>