force-app/main/default/objects/Lead/fields/DV_Recent_Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>DV_Recent_Incident_Description__c</fullName>
    <label>Recent Incident Description</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>