force-app/main/default/objects/Lead/fields/DV_Rel_To_Perpetrator_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DV_Rel_To_Perpetrator_Other_Specify__c</fullName>
    <label>Relationship to Perpetrator (Specify)</label>
    <type>TextArea</type>
</CustomField>